# doclingflow_project

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  document_types.py  main.py  note.txt  pyproject.toml  requirements.txt  run_build_check_with_docker.sh  run_dist_install_check_with_docker.sh  run_heavy_pdf_with_docker.sh  run_install_check_with_docker.sh  run_representative_with_docker.sh  run_tests_with_docker.sh  run_twine_check_with_docker.sh  run_with_docker.sh
adapters/: __init__.py  base_adapter.py  docling_adapter.py
analyzers/: __init__.py  file_analyzer.py  pdf_analyzer.py  pdf_ocr_probe.py
benchmarks/: __init__.py  benchmark_metrics.py
doclingflow/: __init__.py  __main__.py  api.py  cli.py  config.py  constants.py  document_types.py  models.py  version.py
docs/: CLI.md  DOCKER_WORKFLOW.md  INSTALL.md  OUTPUTS.md  PUBLISHING.md  RELEASE_CHECKLIST.md  STABLE_INTERFACES.md  TOOLIZATION_STAGE_REPORT.md
outputs/: construct_tool
pipeline/: __init__.py  batch_runner.py  markdown_pipeline.py  ocr_quality.py  pdf_quality.py  result_collector.py  retry_recovery.py  strategy_selector.py  task_executor.py
processors/: __init__.py  formula_detection.py  image_handler.py  markdown_cleaner.py  math_utils.py  source_recovery.py  special_block_handler.py  structure_repair.py
scripts/: measure_paper_perf.py  preload_docling_models.py
tests/: test_analyzers.py  test_benchmark_metrics.py  test_cli.py  test_docling_adapter.py  test_image_handler.py  test_markdown_cleaner.py  test_math_utils.py  test_output_layout.py  test_package_namespaces.py  test_public_api.py  test_result_collector.py  test_task_executor.py  (+4 more)
(+208 files in other folders)
